--- a/ADMIN_DASHBOARD/src/Styles/Tasks/TasksTable.module.scss
+++ b/ADMIN_DASHBOARD/src/Styles/Tasks/TasksTable.module.scss
@@ -4,7 +4,7 @@
 
 .table_container_2 {
   display: flex;
-  align-items: center;
+  align-items:center;
   justify-content: center;
   padding: 1em 0em;
   width: 100%;
@@ -16,12 +16,21 @@
   }
 
   .task_table {
-    border-radius: 2.5em;
+    border-radius: 1.8em;
     border-collapse: collapse;
-    overflow: hidden;
-    width: 100%;
+    
     box-shadow: 0px 6px 23px -6px rgba(0, 0, 0, 0.2);
     font-size: 0.8em;
+  
+    @media(width < 1600px) {
+      scale: 0.9;
+      margin-top: -70px;
+    }
+  
+    @media(width < 1200px) {
+      scale: 0.80;
+      margin-top: -120px;
+    }
 
     thead tr {
       color: hsl(0, 0%, 95%);
@@ -82,9 +91,32 @@
 
       th:last-child,
       td:last-child {
-        padding-right: 2em;
+        padding-right: 1em;
+      }
+
+      th:first-child{
+        border-top-left-radius: 1.8em;
+      }
+
+      th:last-child{
+        border-top-right-radius: 1.8em;
+      }
+
+      td:nth-child(9){
+        white-space: nowrap;
+      }
+
+      &:last-child{
+        td:first-child{
+          border-bottom-left-radius: 1.8em;
+        }
+
+        td:last-child{
+          border-bottom-right-radius: 1.8em;
+        }
       }
     }
+
 
     tbody {
       tr:nth-child(even) {
@@ -166,4 +198,6 @@
       font-size: 1em;
     }
   }
+
+ 
 }
