--- a/ADMIN_DASHBOARD/src/Styles/Technicians/TechniciansTable.module.scss
+++ b/ADMIN_DASHBOARD/src/Styles/Technicians/TechniciansTable.module.scss
@@ -14,9 +14,8 @@
   }
 
   .tech_table {
-    border-radius: 1.8em;
+    border-radius: 1.8rem;
     border-collapse: collapse;
-    overflow: hidden;
     width: 100%;
     box-shadow: 0px 6px 23px -6px rgba(0, 0, 0, 0.2);
     font-size: 0.8em;
@@ -81,6 +80,26 @@
       th:last-child,
       td:last-child {
         padding-right: 2em;
+      }
+
+      th:first-child {
+        border-top-left-radius: 1.8em;
+      }
+
+      th:last-child {
+        border-top-right-radius: 1.8em;
+      }
+      
+      
+
+      &:last-child {
+        td:first-child {
+          border-bottom-left-radius: 1.8em;
+        }
+
+        td:last-child {
+          border-bottom-right-radius: 1.8em;
+        }
       }
     }
 
